test_output.txt
   Compiling tokio v1.47.1
   Compiling crossbeam-utils v0.8.21
   Compiling num-traits v0.2.19
   Compiling bstr v1.12.0
   Compiling either v1.15.0
   Compiling half v2.6.0
   Compiling predicates-core v1.0.9
   Compiling ciborium-io v0.2.2
   Compiling plotters-backend v0.3.7
   Compiling async-stream-impl v0.3.6
   Compiling difflib v0.4.0
   Compiling normalize-line-endings v0.3.0
   Compiling cast v0.3.0
   Compiling termtree v0.5.1
   Compiling doc-comment v0.3.3
   Compiling itertools v0.13.0
   Compiling plotters-svg v0.3.7
   Compiling ciborium-ll v0.2.2
   Compiling predicates-tree v1.0.12
   Compiling tinytemplate v1.2.1
   Compiling crossbeam-epoch v0.9.18
   Compiling ciborium v0.2.2
   Compiling wait-timeout v0.2.1
   Compiling console v0.15.11
   Compiling crossbeam-deque v0.8.6
   Compiling globset v0.4.16
   Compiling async-stream v0.3.6
   Compiling chrono v0.4.42
   Compiling rayon-core v1.13.0
   Compiling float-cmp v0.10.0
   Compiling plotters v0.3.7
   Compiling oorandom v11.1.5
   Compiling similar v2.7.0
   Compiling ignore v0.4.23
   Compiling predicates v3.1.3
   Compiling anes v0.1.6
   Compiling rayon v1.11.0
   Compiling assert_cmd v2.0.17
   Compiling criterion-plot v0.6.0
   Compiling globwalk v0.9.1
   Compiling insta v1.43.2
   Compiling chrono-tz v0.9.0
   Compiling criterion v0.7.0
   Compiling hyper v1.7.0
   Compiling tower v0.5.2
   Compiling tokio-native-tls v0.3.1
   Compiling tokio-tungstenite v0.26.2
   Compiling tokio-stream v0.1.17
   Compiling tokio-tungstenite v0.27.0
   Compiling tokio-test v0.4.4
   Compiling tower-http v0.6.6
   Compiling hyper-util v0.1.16
   Compiling tera v1.20.0
   Compiling hyper-tls v0.6.0
   Compiling axum v0.8.4
   Compiling reqwest v0.12.23
   Compiling prodigy v0.1.7 (/Users/glen/.prodigy/worktrees/prodigy/session-bc5af836-9d3e-4228-88ce-fe9991071794)
warning: unused imports: `ExecutionContext`, `StepResult`, and `WorkflowState`
 --> src/cook/workflow/checkpoint.rs:5:28
  |
5 | use crate::cook::session::{ExecutionContext, StepResult, WorkflowState};
  |                            ^^^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Path`
  --> src/cook/workflow/checkpoint.rs:13:17
   |
13 | use std::path::{Path, PathBuf};
   |                 ^^^^

warning: unused import: `std::collections::HashMap`
  --> src/cook/workflow/resume.rs:11:5
   |
11 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `warn`
  --> src/cook/workflow/resume.rs:14:21
   |
14 | use tracing::{info, warn};
   |                     ^^^^

warning: unused import: `std::path::PathBuf`
 --> src/cook/workflow/checkpoint_tests.rs:9:9
  |
9 |     use std::path::PathBuf;
  |         ^^^^^^^^^^^^^^^^^^

error[E0596]: cannot borrow `*self` as mutable, as it is behind a `&` reference
   --> src/cook/workflow/executor.rs:583:9
    |
583 |         self.execute_command_by_type(&command_type, step, env, context, env_vars)
    |         ^^^^ `self` is a `&` reference, so the data it refers to cannot be borrowed as mutable
    |
help: consider changing this to be a mutable reference
    |
571 |         &mut self,
    |          +++

warning: variable does not need to be mutable
  --> src/cook/workflow/resume.rs:75:13
   |
75 |         let mut workflow_context = self.restore_workflow_context(&checkpoint)?;
   |             ----^^^^^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0308]: mismatched types
  --> src/cook/workflow/checkpoint_tests.rs:24:19
   |
24 |             name: Some("test-workflow".to_string()),
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `Option<String>`
   |
   = note: expected struct `std::string::String`
                found enum `std::option::Option<std::string::String>`

error[E0560]: struct `normalized::NormalizedWorkflow` has no field named `description`
  --> src/cook/workflow/checkpoint_tests.rs:25:13
   |
25 |             description: Some("Test workflow for checkpointing".to_string()),
   |             ^^^^^^^^^^^ `normalized::NormalizedWorkflow` does not have this field
   |
   = note: available fields are: `variables`

error[E0560]: struct `normalized::NormalizedWorkflow` has no field named `version`
  --> src/cook/workflow/checkpoint_tests.rs:26:13
   |
26 |             version: Some("1.0.0".to_string()),
   |             ^^^^^^^ `normalized::NormalizedWorkflow` does not have this field
   |
   = note: available fields are: `variables`

error[E0560]: struct `normalized::NormalizedWorkflow` has no field named `mapreduce_config`
  --> src/cook/workflow/checkpoint_tests.rs:63:13
   |
63 |             mapreduce_config: None,
   |             ^^^^^^^^^^^^^^^^ `normalized::NormalizedWorkflow` does not have this field
   |
   = note: available fields are: `variables`

For more information about this error, try `rustc --explain E0596`.
warning: `prodigy` (lib) generated 5 warnings
error: could not compile `prodigy` (lib) due to 1 previous error; 5 warnings emitted
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0308, E0560, E0596.
For more information about an error, try `rustc --explain E0308`.
warning: `prodigy` (lib test) generated 6 warnings (5 duplicates)
error: could not compile `prodigy` (lib test) due to 5 previous errors; 6 warnings emitted
error: command `/opt/homebrew/bin/cargo test --no-run --message-format json-render-diagnostics` exited with code 101
